Added basic audio player.

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
             <div class="video-audio">
                 <div>
                     <h1>HTML Audio</h1>
+
+                    <audio controls>
+                        <source type="audio/mpeg" src="https://www.w3schools.com/html/horse.ogg">
+                    </audio>
                 </div>
                 
                 
